# esp32dev

./: Cargo.toml  Dioxus.toml
assets/: index.html  material.css
src/: app.rs  i18n.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: esp_interaction.rs  lib.rs  main.rs  models.rs
src/components/: buttons.rs  cards.rs  layout.rs  mod.rs  pinout.rs  sidebar.rs
src/pages/: devices.rs  home.rs  mod.rs
