[package]
name = "esp32dev-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "^0.7", features = ["web", "router"] }
dioxus-logger = "^0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[workspace]
members = ["src-tauri"]
